Rename package and start adding release bits